# ocr-translate

./: .clang-format  .env.dist  .gitignore  CMakeLists.txt  Makefile  vcpkg.json
include/controllers/: ScreenCaptureController.h
include/ocr/: Language.h  ParsedImage.h  Parser.h  TesseractParser.h
include/translation/: GoogleTranslator.h  Language.h  Translator.h
include/ui/: CaptureFrame.h  SystemTrayIcon.h  Viewer.h
src/: main.cpp
src/controllers/: ScreenCaptureController.cpp
src/ocr/: ParsedImage.cpp  TesseractParser.cpp
src/translation/: GoogleTranslator.cpp
src/ui/: CaptureFrame.cpp  SystemTrayIcon.cpp  Viewer.cpp
vcpkg-overlay-ports/qhotkey/: portfile.cmake  vcpkg.json
vcpkg-overlay-ports/tesseract/: portfile.cmake  vcpkg.json
